tooling/nargo_cli/tests/snapshots/execute__tests__return_twice_force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "13098687238858298230",
  "abi": {
    "parameters": [
      {
        "name": "in0",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "tuple",
        "fields": [
          {
            "kind": "field"
          },
          {
            "kind": "field"
          }
        ]
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62SQQ6AMAgErfFBUMDCza/Y2P7/Cca0NWr0ZCch3Da7C24ojHUaru6lboKZOQWfkHAFb1EFWOKsqCgqm1eipKzBogUwZEqYxShD4UsX/oGunxZc4p9d9Mrf0SeOHTMfvqbHbd56cMP9Pxo7oALZ8UACAAA=",
  "debug_symbols": "XYxLCoAwDAXvkrUn8Coi0k9aAqEpsRWk9O5+cCFdzhveNPBoa9woBdlhXhqwOFNI0k2tT2CVmCluw3wYJWMZPww1uZ8tZ8bhn1Uc+qr4lF7X134B",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
