tooling/nargo_cli/tests/snapshots/execute__tests__shift_right_overflow_force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "10581209090577570621",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 8
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/71UwQrCMAxtXUXr0IOCXvQfOraxHXfwR4pj37FPl2JK46N60HYPRlKSvrwkZVIESLIKziKSM5A1/6FKyGWiQr/B59zIarIrFi8SNquhbkr+3jStjvSXUH+tiTPnfDxnBn6zIZ77HPixF8Gsz8M77tszH3O2FPf+gXwNd3LsP+N+zCmi39cqqdcL9JrrrUjxvrOSfKwpF5i9g4TaiukpInrWkH8GnSqTziPjFVCrFOEfqOb09bv+NSeHYg5z8PPhUCzO86903n3oY/hR59TZaqrtZFs7js3D4pwc+Ft/AvxX7NQ5BwAA",
  "debug_symbols": "lZFNCsMgEEbvMussNCFNmquUEkwyCYKo+FMo4t2rpQUJ2bgRv2HezMALsOHij5nLXVmYHgGEWpnjSqYUYgOL4ULwYy7LQPJD+2+/1UzmaB0zDiZKaAMot/wbEr9zgTD1JD4boLdqYrgk2u5PdPRMjNXEvZZoSTVB64iY0osZzhaBPxG7l2vhxb01nhRpo1bcvMEsq/CUr02b2jGNTaM/",
  "file_map": {
    "50": {
      "source": "fn main(x: u8) {\n    // This would previously overflow in ACIR. Now it returns zero.\n    let value = 1 >> x;\n    assert_eq(value, 0);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/shift_right_overflow/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
